# naive-bayes

./: .gitignore  Naive Bayes.ipynb  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
old/: Naive Bayes.ipynb
src/: algorithm.py  datawrangling.py  runner.py
src/data/: data.csv
tests/: __init__.py  test_algorithm.py  test_datawrangling.py  test_naivebayes.py  test_runner.py
