[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
	pandas == 0.25.1
	numpy == 1.17.0
	scikit-learn == 0.20.4

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
ignore = W503
max-line-length = 79
exlude = 
	.tox,
	.git,
	__pycache__,
	build,
	dist,
	tests/fixtures/*,
	*.pyc,
	*.egg-info,
	.cache,
	.eggs
max-complexity = 10
import-order-style = google

[MESSAGES CONTROL]
disable=C0103,R0201,R0801,R0902,R0903,R0904,W0232,W0621

[REPORTS]
output-format=colorized
reports=y
include-ids=yes
msg-template='{msg_id}:{line:3d},{column}: {obj}: {msg}'

[coverage:run]
parallel = true
branch = true

[coverage:paths]
source =
	src

[coverage:report]
skip_covered = false
show_missing = true
fail_under = 90
omit =
	src/version.py
exclude_lines =
    if __name__ == .__main__.: